<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/category1" >
        <SwitchPreference
            android:key="dark_theme"
            android:title="Dunkler Modus"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="help_messages"
            android:summary="Zeige allgemeine Hinweise an"
            android:title="Hilfestellungen" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category2" >
        <ListPreference
            android:defaultValue="-1"
            android:key="global_export_options"
            android:entries="@array/export_options"
            android:entryValues="@array/export_options"
            android:title="Exportieren"
            android:summary="Exportieren Sie hier Ihre Benutzerprofile" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category3" >
        <Preference
            android:selectable="false"
            android:summary="@string/aboutGoTrack" />

        <Preference
            android:title="@string/cVersion_title"
            android:key="current_version"
            android:summary="@string/cVersion_summary" />

        <Preference
            android:key="send_feedback"
            android:summary="@string/feedback_summary"
            android:title="@string/feedback_title" />
    </PreferenceCategory>

</PreferenceScreen>